--- a/vaccinations.ipynb
+++ b/vaccinations.ipynb
@@ -455,18 +455,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# group by country for third table\n",
-    "\n",
-    "# vaccination_country_df = vaccinations_df.groupby\n",
-    "# vaccination_country_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -555,6 +543,10 @@
    "outputs": [],
    "source": [
     "# group by country for forth table region_data_metadata\n",
+    "\n",
+    "vaccination_country_groupby = vaccination_country_df.groupby(['Country_Region', 'Date']).sum()['Recoveries']\n",
+    "region_date_metadata_groupby = pd.DataFrame(region_date_metadata_groupby)\n",
+    "region_date_metadata_groupby\n",
     "\n",
     "# vaccination_country_df = vaccinations_df.groupby\n",
     "# vaccination_country_df.head()"
@@ -1003,6 +995,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REGION METADATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "      <th>density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.0000</td>\n",
+       "      <td>65.0000</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>38041754</td>\n",
+       "      <td>652230</td>\n",
+       "      <td>58.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41.1533</td>\n",
+       "      <td>20.1683</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>2880917</td>\n",
+       "      <td>28748</td>\n",
+       "      <td>100.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.0339</td>\n",
+       "      <td>1.6596</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>43053054</td>\n",
+       "      <td>2381741</td>\n",
+       "      <td>18.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.5063</td>\n",
+       "      <td>1.5218</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>77142</td>\n",
+       "      <td>468</td>\n",
+       "      <td>164.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-11.2027</td>\n",
+       "      <td>17.8739</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>31825295</td>\n",
+       "      <td>1246700</td>\n",
+       "      <td>25.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country_Region Province_State      lat      lon continent  population  \\\n",
+       "0    Afghanistan            NaN  33.0000  65.0000      Asia    38041754   \n",
+       "1        Albania            NaN  41.1533  20.1683    Europe     2880917   \n",
+       "2        Algeria            NaN  28.0339   1.6596    Africa    43053054   \n",
+       "3        Andorra            NaN  42.5063   1.5218    Europe       77142   \n",
+       "4         Angola            NaN -11.2027  17.8739    Africa    31825295   \n",
+       "\n",
+       "      area  density  \n",
+       "0   652230    58.33  \n",
+       "1    28748   100.21  \n",
+       "2  2381741    18.08  \n",
+       "3      468   164.83  \n",
+       "4  1246700    25.53  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load csv to pandas dataframe\n",
+    "\n",
+    "path2 = \"Resources/region_metadata.csv\"\n",
+    "region_metadata_df = pd.read_csv(path2)\n",
+    "region_metadata_df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1156,7 +1280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1170,11 +1294,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7b04545d47c7e2738fd342f4668feff05623af388be79fa657245cc082efc99d"
+    "hash": "9caa730cadaf79f02e6c0e023f9384e0cf856c4bf4ab42d1a9952074a22e8fbb"
    }
   }
  },
