--- a/vaccinations.ipynb
+++ b/vaccinations.ipynb
@@ -1596,28 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "region_metadata = region_metadata_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#groupby \n",
-    "\n",
-    "region_metadata_groupby = region_metadata.groupby(['Country_Region']).sum()['population']\n",
-    "region_metadata_ = pd.DataFrame(region_metadata_groupby)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1642,88 +1621,301 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country_Region</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>continent</th>\n",
        "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "      <th>density</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.0000</td>\n",
+       "      <td>65.0000</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>38041754</td>\n",
+       "      <td>652230</td>\n",
+       "      <td>58.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Albania</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41.1533</td>\n",
+       "      <td>20.1683</td>\n",
+       "      <td>Europe</td>\n",
        "      <td>2880917</td>\n",
+       "      <td>28748</td>\n",
+       "      <td>100.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.0339</td>\n",
+       "      <td>1.6596</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>43053054</td>\n",
+       "      <td>2381741</td>\n",
+       "      <td>18.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Andorra</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.5063</td>\n",
+       "      <td>1.5218</td>\n",
+       "      <td>Europe</td>\n",
        "      <td>77142</td>\n",
+       "      <td>468</td>\n",
+       "      <td>164.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Angola</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-11.2027</td>\n",
+       "      <td>17.8739</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>31825295</td>\n",
+       "      <td>1246700</td>\n",
+       "      <td>25.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country_Region Province_State      lat      lon continent  population  \\\n",
+       "0    Afghanistan            NaN  33.0000  65.0000      Asia    38041754   \n",
+       "1        Albania            NaN  41.1533  20.1683    Europe     2880917   \n",
+       "2        Algeria            NaN  28.0339   1.6596    Africa    43053054   \n",
+       "3        Andorra            NaN  42.5063   1.5218    Europe       77142   \n",
+       "4         Angola            NaN -11.2027  17.8739    Africa    31825295   \n",
+       "\n",
+       "      area  density  \n",
+       "0   652230    58.33  \n",
+       "1    28748   100.21  \n",
+       "2  2381741    18.08  \n",
+       "3      468   164.83  \n",
+       "4  1246700    25.53  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "region_metadata = region_metadata_df.copy()\n",
+    "region_metadata.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#groupby \n",
+    "\n",
+    "region_metadata_groupby = region_metadata.groupby(['Country_Region']).agg({\"lat\":\"first\",\n",
+    "                                                                           \"lon\": \"first\",\n",
+    "                                                                           \"continent\":\"first\",\n",
+    "                                                                           \"population\": \"sum\",\n",
+    "                                                                           \"area\": \"sum\",\n",
+    "                                                                           \"density\": \"mean\"\n",
+    "                                                                          })                                                                         \n",
+    "region_metadata_ = pd.DataFrame(region_metadata_groupby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area</th>\n",
+       "      <th>density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.0000</td>\n",
+       "      <td>65.0000</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>38041754</td>\n",
+       "      <td>652230</td>\n",
+       "      <td>58.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>41.1533</td>\n",
+       "      <td>20.1683</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>2880917</td>\n",
+       "      <td>28748</td>\n",
+       "      <td>100.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>28.0339</td>\n",
+       "      <td>1.6596</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>43053054</td>\n",
+       "      <td>2381741</td>\n",
+       "      <td>18.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>42.5063</td>\n",
+       "      <td>1.5218</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>77142</td>\n",
+       "      <td>468</td>\n",
+       "      <td>164.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>-11.2027</td>\n",
+       "      <td>17.8739</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>31825295</td>\n",
+       "      <td>1246700</td>\n",
+       "      <td>25.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>182</th>\n",
        "      <td>West Bank and Gaza</td>\n",
+       "      <td>31.6000</td>\n",
+       "      <td>34.8000</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>5190143</td>\n",
+       "      <td>6020</td>\n",
+       "      <td>862.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>183</th>\n",
        "      <td>Western Sahara</td>\n",
+       "      <td>24.2155</td>\n",
+       "      <td>-12.8858</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>567402</td>\n",
+       "      <td>266000</td>\n",
+       "      <td>2.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>184</th>\n",
        "      <td>Yemen</td>\n",
+       "      <td>15.5527</td>\n",
+       "      <td>48.5164</td>\n",
+       "      <td>Asia</td>\n",
        "      <td>28498683</td>\n",
+       "      <td>527968</td>\n",
+       "      <td>53.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>185</th>\n",
        "      <td>Zambia</td>\n",
+       "      <td>-15.4167</td>\n",
+       "      <td>28.2833</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>17861030</td>\n",
+       "      <td>752612</td>\n",
+       "      <td>23.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>186</th>\n",
        "      <td>Zimbabwe</td>\n",
+       "      <td>-20.0000</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>14645468</td>\n",
+       "      <td>390757</td>\n",
+       "      <td>37.48</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>187 rows × 2 columns</p>\n",
+       "<p>187 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Country_Region  population\n",
-       "0           Afghanistan    38041754\n",
-       "1               Albania     2880917\n",
-       "2               Algeria    43053054\n",
-       "3               Andorra       77142\n",
-       "4                Angola    31825295\n",
-       "..                  ...         ...\n",
-       "182  West Bank and Gaza     5190143\n",
-       "183      Western Sahara      567402\n",
-       "184               Yemen    28498683\n",
-       "185              Zambia    17861030\n",
-       "186            Zimbabwe    14645468\n",
+       "         Country_Region      lat      lon continent  population     area  \\\n",
+       "0           Afghanistan  33.0000  65.0000      Asia    38041754   652230   \n",
+       "1               Albania  41.1533  20.1683    Europe     2880917    28748   \n",
+       "2               Algeria  28.0339   1.6596    Africa    43053054  2381741   \n",
+       "3               Andorra  42.5063   1.5218    Europe       77142      468   \n",
+       "4                Angola -11.2027  17.8739    Africa    31825295  1246700   \n",
+       "..                  ...      ...      ...       ...         ...      ...   \n",
+       "182  West Bank and Gaza  31.6000  34.8000      Asia     5190143     6020   \n",
+       "183      Western Sahara  24.2155 -12.8858    Africa      567402   266000   \n",
+       "184               Yemen  15.5527  48.5164      Asia    28498683   527968   \n",
+       "185              Zambia -15.4167  28.2833    Africa    17861030   752612   \n",
+       "186            Zimbabwe -20.0000  30.0000    Africa    14645468   390757   \n",
        "\n",
-       "[187 rows x 2 columns]"
+       "     density  \n",
+       "0      58.33  \n",
+       "1     100.21  \n",
+       "2      18.08  \n",
+       "3     164.83  \n",
+       "4      25.53  \n",
+       "..       ...  \n",
+       "182   862.15  \n",
+       "183     2.13  \n",
+       "184    53.98  \n",
+       "185    23.73  \n",
+       "186    37.48  \n",
+       "\n",
+       "[187 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1989,7 @@
       "\u001b[1;31mUniqueViolation\u001b[0m: duplicate key value violates unique constraint \"pk_countries\"\nDETAIL:  Key (location, iso_code)=(Afghanistan, AFG) already exists.\n",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mIntegrityError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_34536\\315611373.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Push countries lookup table to database\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcountries_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"countries\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mif_exists\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"append\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14208\\315611373.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Push countries lookup table to database\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcountries_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"countries\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mif_exists\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"append\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_sql\u001b[1;34m(self, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[0;32m   2661\u001b[0m             \u001b[0mchunksize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2662\u001b[0m             \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2663\u001b[1;33m             \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2664\u001b[0m         )\n\u001b[0;32m   2665\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[1;34m(frame, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[0;32m    519\u001b[0m         \u001b[0mchunksize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    520\u001b[0m         \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 521\u001b[1;33m         \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    522\u001b[0m     )\n\u001b[0;32m    523\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[1;34m(self, frame, name, if_exists, index, index_label, schema, chunksize, dtype, method)\u001b[0m\n\u001b[0;32m   1315\u001b[0m         )\n\u001b[0;32m   1316\u001b[0m         \u001b[0mtable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1317\u001b[1;33m         \u001b[0mtable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1318\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdigit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mislower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1319\u001b[0m             \u001b[1;31m# check for potentially case sensitivity issues (GH7815)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -1822,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,13 +2025,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# push second table to database  \n",
     "\n",
-    "vaccination_perhundred_df.to_sql(name='vaccination_rate', con=engine, if_exists='append', index=False)"
+    "vaccination_perhundred_df.to_sql(name='vaccinations_per_hundred', con=engine, if_exists='append', index=False)"
    ]
   },
   {
